# parkway

./: .gitignore  .travis.yml  CMakeLists.txt  CTestConfig.cmake  INSTALL  Makefile  Makefile.in  README  README.md  configure
Doc/: manual.ps
Hypergraphs/: ibm16.hgr.bin-0  ibm16.hgr.bin.part.4
Source/: BisectionController.cpp  Coarsener.cpp  FCCoarsener.cpp  Funct.cpp  Hypergraph.cpp  KHMetisController.cpp  Log.cpp  Makefile  MemoryTracker.cpp  Para2DModelCoarsener.cpp  ParaApproxCoarsener.cpp  ParaApproxFCCoarsener.cpp  ParaCoarsener.cpp  ParaController.cpp  ParaGreedyKwayRefiner.cpp  ParaHypergraph.cpp  ParaHypergraphLoader.cpp  ParaRefiner.cpp  ParaRestrCoarsener.cpp  ParaRestrFCCoarsener.cpp  ParaVCycleAllController.cpp  ParaVCycleController.cpp  Parkway.cpp  SeqController.cpp  Utils.cpp  VCycleBisectionController.cpp
Source/Include/: Bisection.hpp  Bit.hpp  Coarsener.hpp  CompleteBinaryTree.hpp  Dyna.hpp  DynaMem.hpp  Funct.hpp  GreedyKwayRefiner.hpp  HashTables.hpp  Log.h  MemoryTracker.hpp  MovementSets.hpp  ParaApproxFCCoarsener.hpp  ParaCoarsener.hpp  ParaController.hpp  ParaFCCoarsener.hpp  ParaGreedyKwayRefiner.hpp  ParaHypergraph.hpp  ParaHypergraphLoader.hpp  ParaVCycleController.hpp  ParaVCycleFinalController.hpp  (+9 more)
Test/: Makefile  cleaner  driver.cpp  driver.h  findidle  machine-file  machinefile  machines  reader.cpp  reader.h
Utilities/: Bin2HMeTiS.cpp  Convert.cpp  Converter.hpp  FromBinConverter.cpp  HarwellBoeingReader.hpp  HarwellBoeingTo2dBin.cpp  HarwellBoeingTo2dBin.hpp  HypergraphTextFileReader.cpp  Makefile  MatrixMarket2Bin.cpp  MatrixMarket2Bin.hpp  PaToH2Bin.hpp  README  Sandia2Bin.cpp  ShuffleHypergraph.hpp  TextFileReader.cpp  TextToBinConverter.cpp  TextToBinConverter.hpp
hypergraphs/: ibm16.hgr.bin-1  notes.txt  test-config.ini
include/: BasicParaController.hpp  Bisection.hpp  BisectionController.hpp  Bit.hpp  BucketNode.hpp  Coarsener.hpp  CompleteBinaryTree.hpp  Config.h  Count.hpp  Dyna.hpp  DynaMem.hpp  DynamicArray.h  FCCoarsener.hpp  FMRefiner.hpp  Funct.hpp  GlobalCommunicator.hpp  GreedyKwayRefiner.hpp  HashTables.hpp  Hypergraph.hpp  HypergraphLoader.hpp  InitBisector.hpp  KHMetisController.hpp  Log.h  Macros.h  MemoryTracker.hpp  MovementSets.hpp  PaToHController.hpp  Para2DModelCoarsener.hpp  ParaApproxCoarsener.hpp  ParaApproxFCCoarsener.hpp  ParaCoarsener.hpp  ParaController.hpp  ParaFCCoarsener.hpp  ParaGreedyKwayRefiner.hpp  ParaHypergraph.hpp  ParaHypergraphLoader.hpp  ParaRefiner.hpp  ParaRestrCoarsener.hpp  ParaRestrFCCoarsener.hpp  ParaVCycleAllController.hpp  (+61 more)
src/: BasicParaController.cpp  BisectionController.cpp  CMakeLists.txt  Coarsener.cpp  CompleteBinaryTree.cpp  Count.cpp  FCCoarsener.cpp  FMRefiner.cpp  Funct.cpp  GlobalCommunicator.cpp  GreedyKwayRefiner.cpp  HashTables.cpp  Hypergraph.cpp  HypergraphLoader.cpp  InitBisector.cpp  KHMetisController.cpp  Log.cpp  MemoryTracker.cpp  MovementSets.cpp  PaToHController.cpp  Para2DModelCoarsener.cpp  ParaApproxCoarsener.cpp  ParaApproxFCCoarsener.cpp  ParaCoarsener.cpp  ParaController.cpp  ParaFCCoarsener.cpp  ParaGreedyKwayRefiner.cpp  ParaHypergraph.cpp  ParaHypergraphLoader.cpp  ParaRefiner.cpp  ParaRestrCoarsener.cpp  ParaRestrFCCoarsener.cpp  ParaVCycleAllController.cpp  ParaVCycleController.cpp  ParaVCycleFinalController.cpp  Parkway.cpp  RecurBisectController.cpp  Refiner.cpp  RestrCoarsener.cpp  RestrFCCoarsener.cpp  (+42 more)
src/coarseners/parallel/: approximate_coarsener.cpp  approximate_first_choice_coarsener.cpp  coarsener.cpp  first_choice_coarsener.cpp  model_coarsener_2d.cpp  restrictive_coarsening.cpp  restrictive_first_choice_coarsening.cpp
src/coarseners/serial/: coarsener.cpp  first_choice_coarsener.cpp  restrictive_coarsener.cpp  restrictive_first_choice_coarsener.cpp
src/controllers/parallel/: basic_contoller.cpp  v_cycle.cpp  v_cycle_all.cpp  v_cycle_final.cpp
src/controllers/serial/: bisection_controller.cpp  initial_bisector.cpp  recursive_bisection_contoller.cpp  v_cycle.cpp  v_cycle_all.cpp  v_cycle_final.cpp  web_graph_serial_controller.cpp
src/data_structures/: bit_field.cpp  map_from_pos_int.cpp  map_to_pos_int.cpp  match_request_table.cpp  movement_set_table.cpp  new_hyperedge_index_table.cpp
src/data_structures/internal/: table_utils.cpp
src/hypergraph/: base_hypergraph.cpp  parallel_hypergraph.cpp  serial_hypergraph.cpp
src/hypergraph/parallel/: hypergraph.cpp  loader.cpp
src/hypergraph/serial/: hypergraph.cpp  loader.cpp
src/internal/: global_communicator.cpp  parallel_controller.cpp  serial_controller.cpp
src/internal/base/: hypergraph.cpp
src/refiners/parallel/: k_way_greedy_refiner.cpp  refiner.cpp
src/refiners/serial/: fm_refiner.cpp  greedy_k_way_refiner.cpp  refiner.cpp
src/utility/: component_builders.cpp  logging.cpp
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/src/data_structures/: bit_field.cpp  complete_binary_tree.cpp  dynamic_array.cpp  map_from_pos_int.cpp  map_to_pos_int.cpp  match_request_table.cpp  movement_set_table.cpp  stack.cpp
tests/unit_tests/src/utility/: math.cpp
utilities/driver/: CMakeLists.txt
utilities/driver/include/: driver.h  reader.h
utilities/driver/src/: driver.cpp  reader.cpp
utilities/hypergraph_converter/: CMakeLists.txt
utilities/hypergraph_converter/include/: Bin2PaToH.hpp  Bin2Para.hpp  Bin2Sandia.hpp  Converter.hpp  HMeTiS2Bin.hpp  HarwellBoeingReader.hpp  HarwellBoeingTo2dBin.hpp  HarwellBoeingToBin.hpp  HarwellBoeingToTxt.hpp  HypergraphTextFileReader.hpp  MatrixMarket2Bin.hpp  MatrixMarketReader.hpp  Sandia2Bin.hpp  TextFileReader.hpp
utilities/hypergraph_converter/src/: Bin2HMeTiS.cpp  Bin2Para.cpp  Converter.cpp  FromBinConverter.cpp  HMeTiS2Bin.cpp  HarwellBoeingReader.cpp  HarwellBoeingTo2dBin.cpp  HarwellBoeingToBin.cpp  HarwellBoeingToTxt.cpp  HypergraphTextFileReader.cpp  MatrixMarket2Bin.cpp  MatrixMarketReader.cpp  PaToH2Bin.cpp  Sandia2Bin.cpp  TextFileReader.cpp
utilities/hypergraph_printer/: CMakeLists.txt
utilities/hypergraph_printer/include/: PrintHypergraphChars.hpp
utilities/hypergraph_printer/src/: PrintHypergraphChars.cpp
(+112 files in other folders)
